@@ -5,7 +5,7 @@
     <groupId>io.github.freya022</groupId>
     <artifactId>BotCommands</artifactId>
     <!-- Major for big breaking changes, minor for small breaking changes / possibly features, revision for bugfix/features -->
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0-alpha.1-SNAPSHOT</version>
     <name>BotCommands</name>
 
     <description>A JDA command framework (&amp; much more) which helps developing your bots fast</description>
@@ -76,7 +76,6 @@
                             <release>17</release>
                             <additionalJOptions>
                                 <additionalJOption>-Xdoclint:-missing</additionalJOption> <!-- No need to print "no comment" warnings -->
-                                <additionalJOption>--enable-preview</additionalJOption>
                             </additionalJOptions>
                             <links>
                                 <link>https://ci.dv8tion.net/job/JDA5/javadoc</link>
@@ -205,9 +204,9 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>com.github.freya022</groupId>
+                <groupId>io.github.freya022</groupId>
                 <artifactId>BotCommandsBuild-maven-plugin</artifactId>
-                <version>763c9f0108</version>
+                <version>48e4678980</version>
                 <executions>
                     <execution>
                         <goals>
@@ -294,7 +293,7 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId> <!-- Somehow fixes including kotlin sources -->
+                <groupId>org.codehaus.mojo</groupId> <!-- Fixes including kotlin and generated sources -->
                 <artifactId>build-helper-maven-plugin</artifactId>
                 <version>3.0.0</version>
 
@@ -307,6 +306,8 @@
                         <configuration>
                             <sources>
                                 <source>src/main/kotlin</source>
+                                <!-- Somehow fixes maven taking already compiled classes (by IJ) into the final JAR -->
+                                <source>${project.build.directory}/generated-sources</source>
                             </sources>
                         </configuration>
                     </execution>
@@ -358,9 +359,14 @@
             <version>${kotlin.coroutine.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-datetime-jvm</artifactId>
+            <version>0.4.0</version>
+        </dependency>
+        <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>5.0.0-alpha.20</version>
+            <version>5.0.0-beta.1</version>
             <exclusions>
                 <exclusion>
                     <groupId>club.minnced</groupId>
@@ -368,6 +374,16 @@
                 </exclusion>
             </exclusions>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.minndevelopment</groupId>
+            <artifactId>jda-ktx</artifactId>
+            <version>17eb77a138</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>3.0.2</version>
         </dependency>
         <!-- Local testing -->
 <!--        <dependency>-->
@@ -390,7 +406,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.9.0</version>
+            <version>2.10</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
@@ -401,7 +417,7 @@
         <dependency>
             <groupId>io.github.classgraph</groupId>
             <artifactId>classgraph</artifactId>
-            <version>4.8.149</version>
+            <version>4.8.151</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -415,11 +431,6 @@
             <version>3.1.1</version>
         </dependency>
         <dependency>
-            <groupId>com.github.minndevelopment</groupId>
-            <artifactId>jda-ktx</artifactId>
-            <version>081a177281</version>
-        </dependency>
-        <dependency>
             <groupId>info.debatty</groupId>
             <artifactId>java-string-similarity</artifactId>
             <version>2.0.0</version>
@@ -428,6 +439,12 @@
             <groupId>io.github.microutils</groupId>
             <artifactId>kotlin-logging-jvm</artifactId>
             <version>2.1.23</version>
+        </dependency>
+        <dependency>
+            <groupId>dev.reformator.stacktracedecoroutinator</groupId>
+            <artifactId>stacktrace-decoroutinator-jvm</artifactId>
+            <version>2.3.3</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
